--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -307,9 +307,9 @@ jobs:
 
           # Run unit tests (non-debug)
           if [[ "${{ inputs.workers }}" == "off" ]]; then
-            python -m pytest ${{ inputs.extra-args }} ${{ matrix.target }} --junitxml=junit/test-results.xml
+            python -m pytest -s ${{ inputs.extra-args }} ${{ matrix.target }} --junitxml=junit/test-results.xml
           else
-            python -m pytest ${{ inputs.extra-args}} -n ${{ inputs.workers }} ${{ matrix.target }} --junitxml=junit/test-results.xml
+            python -m pytest -s ${{ inputs.extra-args}} -n ${{ inputs.workers }} ${{ matrix.target }} --junitxml=junit/test-results.xml
           fi
 
       - name: Run doctests
