--- a/.github/workflows/language-test.yml
+++ b/.github/workflows/language-test.yml
@@ -136,5 +136,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: 'tracesfiles-${{ inputs.size-postfix }}'
+          name: 'tracefiles-${{ inputs.size-postfix }}'
           path: './traces'
