Pytest (Debug): update before GDB install

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -322,6 +322,7 @@ jobs:
           # Debug mode
           if [[ "${{ inputs.debug }}" == "true" && "${{ inputs.amalgam-plat-arch }}" == "linux-amd64" ]]; then
             # Run GDB in batch mode and capture the output
+            sudo apt-get update
             sudo apt-get install -y gdb
             echo "GDB installation complete"
             set +e
