Add 'read' permissions to language-test.yml

--- a/.github/workflows/language-test.yml
+++ b/.github/workflows/language-test.yml
@@ -39,6 +39,8 @@ jobs:
 
   test:
     name: Language test (${{ inputs.size-postfix }})
+    permissions:
+      actions: read
     runs-on: howso-ubuntu-runner-xlarge-24.04
     steps:
 
